# tap-rest-api

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
examples/usgs/: custom_spec.json  sample_records.json  today.sh
examples/usgs/catalog/: earthquakes.json
examples/usgs/config/: tap_config.json
examples/usgs/schema/: earthquakes.json
tap_rest_api/: __init__.py  default_spec.json  helper.py  json2schema.py  main.py  schema.py  sync.py
tap_rest_api/json2schema/: __init__.py
test_data/: test_multiple_diff.json  test_multiple_same.json  test_single.json  test_single_2.json  test_single_2_schema.json  test_single_schema.json
tests/: install_test.sh  test_usgs.py
tests/unit/: test_fixes.py  test_headers.py  test_schema.py  test_windows.py
